<resources>
    <string name="app_name">Shopping List</string>
    <string name="item_description">Item description</string>
    <string name="title">Title</string>
    <string name="main_title">Shopping list</string>
    <string name="add_item">Add item</string>
    <string name="enter_title_hint">Enter name of good here</string>
    <string name="hint_under_image">Click here to take photo</string>
    <string name="description_hint">Enter description of the good here</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="amount">Amount: </string>
    <string name="in_cart">IN THE CART</string>
    <string name="_1">1</string>
</resources>