<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddItemFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical50Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/addItemTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="8dp"
        android:text="@string/add_item"
        style="@style/Base.Widget.MaterialComponents.TextView.MyScreenTitleText"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imageItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/image_button_icon"
        app:layout_constraintTop_toBottomOf="@id/addItemTitleTextView"
        app:layout_constraintEnd_toStartOf="@id/textItemButton"
        style="@style/Base.Widget.Material3.FloatingActionButton.MySecondaryFloatingButton"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/textItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/text_button_icon"
        app:layout_constraintTop_toBottomOf="@id/addItemTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Base.Widget.Material3.FloatingActionButton.MySecondaryFloatingButton"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/confirm_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Base.Widget.Material3.FloatingActionButton.MyFloatingButton"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/returnToShoppingListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/list_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Base.Widget.Material3.FloatingActionButton.MyFloatingButton"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/returnToShoppingListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textItemButton"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/titleEditText"
            style="@style/Base.Widget.MaterialComponents.TextView.MyItemTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/descriptionEditText"
            style="@style/Base.Widget.MaterialComponents.TextView.MyDescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEditText" />

        <ImageView
            android:id="@+id/addImageImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/no_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

        <TextView
            android:id="@+id/underImageTextView"
            style="@style/Base.Widget.MaterialComponents.TextView.MyDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_under_image"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImageImageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/decreaseAmountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/minus"
            app:layout_constraintBottom_toBottomOf="@id/amountTextView"
            app:layout_constraintEnd_toStartOf="@id/amountTextView"
            app:layout_constraintTop_toTopOf="@id/amountTextView" />

        <Button
            android:id="@+id/increaseAmountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="@id/amountTextView"
            app:layout_constraintBottom_toBottomOf="@id/amountTextView"
            app:layout_constraintStart_toEndOf="@id/amountTextView" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintTop_toBottomOf="@id/underImageTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp"
            style="@style/Base.Widget.MaterialComponents.TextView.MyDescriptionText"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>